--- a/MiniDatabase/CreateFields/CreateFieldText.xaml
+++ b/MiniDatabase/CreateFields/CreateFieldText.xaml
@@ -8,6 +8,6 @@
              d:DesignHeight="50" d:DesignWidth="300" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" xmlns:my="clr-namespace:MiniDatabase.CreateFields">
     <DockPanel LastChildFill="True" Margin="10,5" >
         <Label>Default value</Label>
-        <input:InputControlText x:Name="TextField" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldText, AncestorLevel=1}, Path=CreatedRecord}" />
+        <input:InputControlText x:Name="TextField" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldText, AncestorLevel=1}, Path=CreatedRecord.Val.Text}" />
     </DockPanel>
 </UserControl>
