--- a/trunk/MiniDatabase/Content/CreateDatabase.xaml
+++ b/trunk/MiniDatabase/Content/CreateDatabase.xaml
@@ -25,8 +25,7 @@
           <misc:TreeAttribute.AttributeContent >
             <createFields:DatabaseProperties />
           </misc:TreeAttribute.AttributeContent>
-          <misc:TreeAttribute Header="Empty" ContextMenu="{StaticResource TreeItemContextMenu}" CanBeRemoved="False">
-          </misc:TreeAttribute>
+          <misc:TreeAttribute Header="Empty" ContextMenu="{StaticResource TreeItemContextMenu}" CanBeRemoved="False"/>
         </misc:TreeAttribute>
       </TreeView>
     </DockPanel>
