--- a/trunk/MiniDatabase/ContentPage.xaml
+++ b/trunk/MiniDatabase/ContentPage.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="MiniDatabase.ContentPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Minis!" Height="350" Width="525" xmlns:my="clr-namespace:MiniDatabase">
+        xmlns:my="clr-namespace:MiniDatabase"
+        Title="Minis!" Height="350" Width="525" >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
