--- a/MiniDatabase/Content/ResultsTab/ResultList.xaml
+++ b/MiniDatabase/Content/ResultsTab/ResultList.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="200" Loaded="InitEntries" xmlns:my="clr-namespace:MiniDatabase.Content.ResultsTab">
+             d:DesignHeight="181" d:DesignWidth="755" Loaded="InitEntries" xmlns:my="clr-namespace:MiniDatabase.Content.ResultsTab">
     <Grid>
-        <DataGrid ItemsSource="{Binding Path=Results, RelativeSource={RelativeSource FindAncestor, AncestorType=my:ResultList, AncestorLevel=1}}" AutoGenerateColumns="False">
+        <DataGrid x:Name="Results" ItemsSource="{Binding Path=Results, RelativeSource={RelativeSource FindAncestor, AncestorType=my:ResultList, AncestorLevel=1}}" AutoGenerateColumns="False">
       
         </DataGrid>
     </Grid>
