--- a/MiniDatabase/Content/ResultsTab/ResultList.xaml
+++ b/MiniDatabase/Content/ResultsTab/ResultList.xaml
@@ -4,10 +4,74 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="181" d:DesignWidth="755" Loaded="InitEntries" xmlns:my="clr-namespace:MiniDatabase.Content.ResultsTab">
-    <Grid>
-        <DataGrid x:Name="Results" ItemsSource="{Binding Path=Results, RelativeSource={RelativeSource FindAncestor, AncestorType=my:ResultList, AncestorLevel=1}}" AutoGenerateColumns="False">
-      
+             d:DesignHeight="150" d:DesignWidth="700" Loaded="InitEntries" xmlns:my="clr-namespace:MiniDatabase.Content.ResultsTab" x:Name="ShowList">
+    <Grid Name="LayoutRoot">
+        <DataGrid ItemsSource="{Binding Path=Results, RelativeSource={RelativeSource FindAncestor, AncestorType=my:ResultList, AncestorLevel=1}}" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn 
+                             Binding="{Binding ID}"  
+                             Header="ID"/>
+
+                 <DataGridTemplateColumn Width="*">
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style 
+                          TargetType="DataGridColumnHeader">
+                            <Setter 
+                              Property="HorizontalContentAlignment" 
+                              Value="Stretch" />
+                            <Setter 
+                              Property="VerticalContentAlignment"  
+                              Value="Stretch" />
+                            <Setter Property="Margin" 
+                                         Value="0" />
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <ItemsControl  
+                          ItemsSource="{Binding Path=Columns, ElementName=ShowList}">
+                                            <ItemsControl.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <StackPanel 
+                                         Orientation="Horizontal">
+                                                    </StackPanel>
+                                                </ItemsPanelTemplate>
+                                            </ItemsControl.ItemsPanel>
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <Border  Width="70" >
+                                                        <TextBlock Text="{Binding}" 
+                                              TextAlignment="Center"/>
+                                                    </Border>
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <ItemsControl  
+                                ItemsSource="{Binding Values}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Border Width="70">
+                                            <TextBlock Text="{Binding}" 
+                                            TextAlignment="Center"/>
+                                        </Border>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
         </DataGrid>
     </Grid>
 </TabItem>
