--- a/MiniDatabase/Content/ChooseDatabase.xaml
+++ b/MiniDatabase/Content/ChooseDatabase.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="MiniDatabase.Content.OpenDatabase"
+﻿<my:ContentGeneric x:Class="MiniDatabase.Content.ChooseDatabase"
+             xmlns:my="clr-namespace:MiniDatabase.Content"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,9 +13,9 @@
         </Grid.RowDefinitions>
         <ListBox x:Name="Databases"  Margin="10" ItemsSource="{Binding Filenames}" DisplayMemberPath="Name"  SelectedValue="{Binding Filename}" MouseDoubleClick="LoadDatabase">
             </ListBox>
-        <StackPanel Grid.Row="1"  Orientation="Horizontal" HorizontalAlignment="Right" Margin="15">
-            <Button Width="100" IsCancel="True" Margin="0,0,10,0">Cancel</Button>
-            <Button Width="100" IsDefault="True"  Margin="10,0,0,0" Click="LoadDatabase">Ok</Button>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Right"  Orientation="Horizontal">
+            <Button Margin="10" Content="Load Database" Click="LoadDatabase"></Button>
+            <Button Margin="10" Content="Create New Database" Click="NewDatabase"></Button>
         </StackPanel>
     </Grid>
-</Window>
+</my:ContentGeneric>
