--- a/MiniDatabase/ContentPage.xaml
+++ b/MiniDatabase/ContentPage.xaml
@@ -12,6 +12,7 @@
             <MenuItem Header="_File">
                 <MenuItem Header="_Create new database" Click="RequestNewDatabase"/>
                 <MenuItem Header="_Manage enums" Click="RequestManageEnums" />
+                <MenuItem Header="_Switch database" Click="RequestSwitchDatabase"/>
             </MenuItem>
              <MenuItem Header="_About" Click="AboutClick" />
             </Menu>
