--- a/MiniDatabase/Content/Results.xaml
+++ b/MiniDatabase/Content/Results.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
     <DockPanel>
-        <TabControl Name="ResultControl" TabStripPlacement="Left">
+        <TabControl Name="ResultControl" TabStripPlacement="Left" SelectionChanged="ResultControl_SelectionChanged">
             <tabs:ResultList Header="All" x:Name="All" />
             <tabs:ResultAdd Grid.Column="0"  Header="Adding" x:Name="Add" />
         </TabControl>
