--- a/MiniDatabase/Content/ResultsTab/ResultAdd.xaml
+++ b/MiniDatabase/Content/ResultsTab/ResultAdd.xaml
@@ -6,8 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="125" d:DesignWidth="200">
     <DockPanel LastChildFill="True">
-        <Button Content="Done" DockPanel.Dock="Bottom" Click="AddRecords"/>
-        <Button Content="Add" DockPanel.Dock="Bottom" Click="Plus"/>
+        <Button Content="Add and Next" DockPanel.Dock="Bottom" Click="AddRecord"/>
         <StackPanel Name="Controls" CanHorizontallyScroll="True" CanVerticallyScroll="True">
         </StackPanel>
     </DockPanel>
