--- a/MiniDatabase/Content/Results.xaml
+++ b/MiniDatabase/Content/Results.xaml
@@ -9,8 +9,8 @@
              d:DesignHeight="300" d:DesignWidth="500">
     <DockPanel>
         <TabControl Name="ResultControl" TabStripPlacement="Left" SelectionChanged="ResultControl_SelectionChanged">
-            <tabs:ResultList Header="All" x:Name="All" />
-            <tabs:ResultDetail Grid.Column="0"  Header="Adding" x:Name="Add" CanBeEdited="True" />
+            <tabs:ResultList Header="All" x:Name="All" ParentContent="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=content:ContentGeneric}}" />
+            <tabs:ResultDetail Grid.Column="0"  Header="Adding" x:Name="Add" CanBeEdited="True" ParentContent="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=content:ContentGeneric}}" />
         </TabControl>
     </DockPanel>
 </content:ContentGeneric>
