--- a/MiniDatabase/Content/ResultsTab/ResultDetail.xaml
+++ b/MiniDatabase/Content/ResultsTab/ResultDetail.xaml
@@ -1,8 +1,9 @@
-﻿<TabItem x:Class="MiniDatabase.Content.ResultsTab.ResultDetail"
+﻿<parentTab:RecordableTab x:Class="MiniDatabase.Content.ResultsTab.ResultDetail"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:parentTab="clr-namespace:MiniDatabase.Content.ResultsTab"
              mc:Ignorable="d" 
              d:DesignHeight="125" d:DesignWidth="200">
     <DockPanel LastChildFill="True">
@@ -11,4 +12,4 @@
       <StackPanel Name="Entries" CanHorizontallyScroll="True" CanVerticallyScroll="True" VerticalAlignment="Top" />
     </ScrollViewer>      
     </DockPanel>
-</TabItem>
+</parentTab:RecordableTab>
