--- a/MiniDatabase/Content/ChooseDatabase.xaml
+++ b/MiniDatabase/Content/ChooseDatabase.xaml
@@ -13,10 +13,11 @@
         </Grid.RowDefinitions>
         <ListBox x:Name="Databases"  Margin="10" ItemsSource="{Binding Filenames}" DisplayMemberPath="Name"  SelectedValue="{Binding Filename}" MouseDoubleClick="LoadDatabase">
             </ListBox>
-        <StackPanel Grid.Row="1" HorizontalAlignment="Right"  Orientation="Horizontal">
-            <Button Margin="10" Content="Delete" Click="DeleteDatabase"></Button>
-            <Button Margin="10" Content="Load" Click="LoadDatabase"></Button>
+        <UniformGrid Grid.Row="1" Rows="1">
             <Button Margin="10" Content="Create" Click="NewDatabase"></Button>
-        </StackPanel>
+            <Button Margin="10" Content="Load" Click="LoadDatabase"></Button>            
+            <Button Margin="10" Content="Edit" Click="ChangeDatabase" IsEnabled="False"></Button>            
+            <Button Margin="10" Content="Delete" Click="DeleteDatabase"></Button>            
+        </UniformGrid>
     </Grid>
 </my:ContentGeneric>
