--- a/MiniDatabase/ContentPage.xaml
+++ b/MiniDatabase/ContentPage.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:my="clr-namespace:MiniDatabase"
-        Title="Minis!" Height="279" Width="561" >
+        Title="Minis!" Height="279" Width="561" Closing="Window_Closing" >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
