--- a/MiniDatabase/Content/ResultsTab/ResultSelect.xaml
+++ b/MiniDatabase/Content/ResultsTab/ResultSelect.xaml
@@ -8,25 +8,28 @@
              xmlns:parentTab="clr-namespace:MiniDatabase.Content.ResultsTab"
              mc:Ignorable="d" 
              d:DesignHeight="225" d:DesignWidth="300">
-    <DockPanel LastChildFill="True">
-        <TextBox Margin="3" HorizontalAlignment="Center" x:Name="Filter_name" DockPanel.Dock="Top" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=parentTab:RecordableTab, AncestorLevel=1}, Path=FilterName}"/>
-        <TextBlock Margin="3" HorizontalAlignment="Center" x:Name="ConditionsInString" DockPanel.Dock="Top">Current search options</TextBlock>
-        <UniformGrid DockPanel.Dock="Bottom" Rows="1">
-            <ToggleButton Margin="5,5,5,5" Click="ToggleButton_Click">Negative</ToggleButton>
-            <Button Margin="5,5,5,5">And</Button>
-            <Button Margin="5,5,5,5">Clear</Button>
-            <Button Margin="5,5,5,5">Select!</Button>
-        </UniformGrid>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <ListBox Margin="7"  Grid.Column="0" x:Name="AttributeName" ItemsSource="{Binding Description}" DisplayMemberPath="Name" SelectionChanged="AttributeName_SelectionChanged" SelectedIndex="0"/>
-            <ListBox Margin="7" Grid.Column="1" x:Name="Operations" ItemsSource="{x:Static misc:Common.SimpleExpressions}" DisplayMemberPath="OperationName"/>
-            <ContentControl Margin="7"  Grid.Column="2" x:Name="User_Entry" Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=parentTab:ResultSelect, AncestorLevel=1}, Path=SelectedContent}">
-            </ContentControl>
-        </Grid>
-    </DockPanel>
+  <DockPanel LastChildFill="True">
+    <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+      <Label>Name:</Label>
+      <TextBox Margin="3" HorizontalAlignment="Center" x:Name="Filter_name"  Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=parentTab:RecordableTab, AncestorLevel=1}, Path=FilterName}"/>
+    </StackPanel>
+    <TextBlock Margin="3" HorizontalAlignment="Center" x:Name="ConditionsInString" DockPanel.Dock="Top">Current search options</TextBlock>
+    <UniformGrid DockPanel.Dock="Bottom" Rows="1">
+      <ToggleButton Margin="5,5,5,5" Click="ToggleButton_Click">Negative</ToggleButton>
+      <Button Margin="5,5,5,5">And</Button>
+      <Button Margin="5,5,5,5">Clear</Button>
+      <Button Margin="5,5,5,5">Select!</Button>
+    </UniformGrid>
+    <Grid>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+      <ListBox Margin="7"  Grid.Column="0" x:Name="AttributeName" ItemsSource="{Binding Description}" DisplayMemberPath="Name" SelectionChanged="AttributeName_SelectionChanged" SelectedIndex="0"/>
+      <ListBox Margin="7" Grid.Column="1" x:Name="Operations" ItemsSource="{x:Static misc:Common.SimpleExpressions}" DisplayMemberPath="OperationName"/>
+      <ContentControl Margin="7"  Grid.Column="2" x:Name="User_Entry" Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=parentTab:ResultSelect, AncestorLevel=1}, Path=SelectedContent}">
+      </ContentControl>
+    </Grid>
+  </DockPanel>
 </parentTab:RecordableTab>
