--- a/MiniDatabase/Content/ResultsTab/ResultSelect.xaml
+++ b/MiniDatabase/Content/ResultsTab/ResultSelect.xaml
@@ -15,7 +15,7 @@
     </StackPanel>
     <TextBlock Margin="3" HorizontalAlignment="Center" x:Name="ConditionsInString" DockPanel.Dock="Top">Current search options</TextBlock>
     <UniformGrid DockPanel.Dock="Bottom" Rows="1">
-      <ToggleButton Margin="5,5,5,5" Click="ToggleButton_Click">Negative</ToggleButton>
+      <ToggleButton Margin="5,5,5,5" Click="ToggleButton_Click">Invert</ToggleButton>
       <Button Margin="5,5,5,5">And</Button>
       <Button Margin="5,5,5,5">Clear</Button>
       <Button Margin="5,5,5,5">Select!</Button>
@@ -26,9 +26,9 @@
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
-      <ListBox Margin="7"  Grid.Column="0" x:Name="AttributeName" ItemsSource="{Binding Description}" DisplayMemberPath="Name" SelectionChanged="AttributeName_SelectionChanged" SelectedIndex="0"/>
-      <ListBox Margin="7" Grid.Column="1" x:Name="Operations" ItemsSource="{x:Static misc:Common.SimpleExpressions}" DisplayMemberPath="OperationName"/>
-      <ContentControl Margin="7"  Grid.Column="2" x:Name="User_Entry" Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=parentTab:ResultSelect, AncestorLevel=1}, Path=SelectedContent}">
+      <ListBox Margin="7"  Grid.Column="0" x:Name="AttributeName" ItemsSource="{Binding Description}" DisplayMemberPath="Name" SelectedIndex="0"/>
+      <ListBox Margin="7" Grid.Column="1" x:Name="Operations" ItemsSource="{x:Static misc:Common.SimpleExpressions}" DisplayMemberPath="OperationName" SelectedIndex="0"/>
+      <ContentControl Margin="7"  Grid.Column="2" x:Name="User_Entry" Content="{Binding ElementName=AttributeName, Path=SelectedItem.VControl}" >
       </ContentControl>
     </Grid>
   </DockPanel>
