--- a/MiniDatabase/Content/Results.xaml
+++ b/MiniDatabase/Content/Results.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="300" d:DesignWidth="500">
     <DockPanel>
         <TabControl Name="ResultControl" TabStripPlacement="Left" SelectionChanged="ResultControl_SelectionChanged">
-            <tabs:ResultList Header="All" x:Name="All" ParentContent="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=content:ContentGeneric}}" />
+            <tabs:ResultList Header="All" x:Name="All" />
             <tabs:ResultDetail Grid.Column="0"  Header="Adding" x:Name="Add" CanBeEdited="True" ParentContent="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=content:ContentGeneric}}"  />
             <tabs:ResultSelect Header="Select" ParentContent="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=content:ContentGeneric}}"></tabs:ResultSelect>
         </TabControl>
