--- a/MiniDatabase/Content/CreateFields/FieldGeneric.xaml
+++ b/MiniDatabase/Content/CreateFields/FieldGeneric.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MiniDatabase.CreateFields.CreateFieldGeneric"
+﻿<UserControl x:Class="MiniDatabase.Content.CreateFields.FieldGeneric"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -16,10 +16,10 @@
       <RowDefinition MinHeight="50" Height="*" />
     </Grid.RowDefinitions>
     <Button Grid.Column="0" Grid.Row="0" Margin="15" Click="createTextClick">Create text</Button>
-    <Button Grid.Column="0" Grid.Row="1" Margin="15" Click="createIntClick" IsEnabled="False">Create int value</Button>
+    <Button Grid.Column="0" Grid.Row="1" Margin="15" Click="createIntClick">Create int value</Button>
     <Button Grid.Column="1" Grid.Row="0" Margin="15" Click="createEnumClick" IsEnabled="False">Create enum</Button>
     <Button Grid.Column="1" Grid.Row="1" Margin="15" IsEnabled="False" >Create composite</Button>
-    <Button Grid.Column="0" Grid.Row="2" Margin="15" IsEnabled="False">Create Data</Button>
+    <Button Grid.Column="0" Grid.Row="2" Margin="15" Click="createDateClick">Create Date</Button>
     <Button Grid.Column="1" Grid.Row="2" Margin="15" IsEnabled="False">Create Image</Button>
   </Grid>
 </UserControl>
