--- a/MiniDatabase/Content/CreateFields/FieldProperties.xaml
+++ b/MiniDatabase/Content/CreateFields/FieldProperties.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MiniDatabase.CreateFields.DatabaseProperties"
+﻿<UserControl x:Class="MiniDatabase.Content.CreateFields.FieldProperties"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
