--- a/MiniDatabase/Content/CreateFields/FieldText.xaml
+++ b/MiniDatabase/Content/CreateFields/FieldText.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="MiniDatabase.CreateFields.CreateFieldText"
+﻿<UserControl x:Class="MiniDatabase.Content.CreateFields.FieldText"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:input="clr-namespace:MiniDatabase.Records.Text"
+             xmlns:input="clr-namespace:MiniDatabase.Records.InputControl"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="300" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" xmlns:my="clr-namespace:MiniDatabase.CreateFields">
+             d:DesignHeight="50" d:DesignWidth="300" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" xmlns:my="clr-namespace:MiniDatabase.Content.CreateFields">
     <DockPanel LastChildFill="True" Margin="10,5" >
         <Label>Default value</Label>
         <input:InputControlText x:Name="TextField" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldText, AncestorLevel=1}, Path=CreatedRecord.PresetValue.Text}" />
