--- a/MiniDatabase/Records/InputControl/InputControlText.xaml
+++ b/MiniDatabase/Records/InputControl/InputControlText.xaml
@@ -1,4 +1,4 @@
-﻿<TextBox x:Class="MiniDatabase.Records.Text.InputControlText"
+﻿<TextBox x:Class="MiniDatabase.Records.InputControl.InputControlText"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
