--- a/MiniDatabase/Themes/Generic.xaml
+++ b/MiniDatabase/Themes/Generic.xaml
@@ -1,7 +1,7 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:createFields="clr-namespace:MiniDatabase.CreateFields"
+    xmlns:createFields="clr-namespace:MiniDatabase.Content.CreateFields"
     xmlns:misc="clr-namespace:MiniDatabase.Misc">
 
     <Style TargetType="{x:Type misc:NumericUpDown}">
