--- a/MiniDatabase/Content/CreateFields/FieldInteger.xaml
+++ b/MiniDatabase/Content/CreateFields/FieldInteger.xaml
@@ -3,15 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:my="clr-namespace:MiniDatabase.Content.CreateFields"
              xmlns:misc="clr-namespace:MiniDatabase.Misc"
              mc:Ignorable="d" 
              d:DesignHeight="150" d:DesignWidth="300">
     <UniformGrid Rows="3" Columns="2">
         <TextBox>Value</TextBox>
-        <misc:NumericUpDown Minimum="{Binding NumericValue, ElementName=Min}" Maximum="{Binding NumericValue, ElementName=Max, Mode=TwoWay}"/>
+    <misc:NumericUpDown Minimum="{Binding NumericValue, ElementName=Min}" Maximum="{Binding NumericValue, ElementName=Max}" NumericValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:FieldInteger, AncestorLevel=1}, Path=CreatedRecord.PresetValue.NNumber}"/>
         <TextBox>Maximum</TextBox>
-        <misc:NumericUpDown x:Name="Max" Minimum="-1000" Maximum="1000" NumericValue="10"/>
+    <misc:NumericUpDown x:Name="Max" Minimum="-1000" Maximum="1000" NumericValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:FieldInteger, AncestorLevel=1}, Path=CreatedRecord.MaxValue, Mode=TwoWay}"/>
         <TextBox>Minimum</TextBox>
-        <misc:NumericUpDown x:Name="Min" Minimum="-1000" Maximum="1000" NumericValue="-1"/>
+    <misc:NumericUpDown x:Name="Min" Minimum="-1000" Maximum="1000" NumericValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:FieldInteger, AncestorLevel=1}, Path=CreatedRecord.MinValue, Mode=TwoWay}"/>
     </UniformGrid>
 </UserControl>
