Fixed default values

--- a/MiniDatabase/Content/CreateFields/FieldDate.xaml
+++ b/MiniDatabase/Content/CreateFields/FieldDate.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:input="clr-namespace:MiniDatabase.Records.InputControl"
+             xmlns:my="clr-namespace:MiniDatabase.Content.CreateFields"             
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="300">
     <DockPanel>
         <Label DockPanel.Dock="Left">Default date:</Label>
-        <input:InputControlDate/>
+        <input:InputControlDate SelectedDate="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:FieldDate, AncestorLevel=1}, Path=CreatedRecord.PresetValue.DTime, Mode=TwoWay}"/>
     </DockPanel>
 </UserControl>
